--- a/Icebreaker/startFundraiser/templates/startFundraiser/campaign-editform.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/campaign-editform.html
@@ -1,5 +1,5 @@
 
-{% extends 'startFundraiser/home.html' %}
+{% extends 'startFundraiser/base.html' %}
 {% block title %}Start a Campaign{% endblock %}
 {% load widget_tweaks %}
 
