--- a/Icebreaker/startFundraiser/templates/startFundraiser/home.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/home.html
@@ -1,165 +1,10 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- meta tags -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <!-- Google fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
-        <title>{% block title %}IceBreaker{% endblock %}</title>
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{% static 'startFundraiser/style.css' %}">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<head>
+  <meta charset="UTF-8">
+  <title>Title</title>
+</head>
+<body>
 
-    </head>
-
-    <body>
-        <!-- Header -->
-<header>
-    <div class="wrapper">
-        <nav>
-
-            <div class="logo"><a href="{% url 'startFundraiser:home' %}" style="color: #0c5460">iceBreaker</a></div>
-            <ul>
-                <li><a href="{% url 'startFundraiser:start_campaign' %}">Start Campaign</a></li>
-                <li><a href="{% url 'startFundraiser:start_campaign' %}">Volunteer</a></li>
-                <li><a class="active" href="{% url 'startFundraiser:campaigns' %}">Explore</a></li>
-                <li><a class="active" href="{% url 'startFundraiser:campaigns' %}">Marketplace</a></li>
-                <li><a class="active" href="{% url 'startFundraiser:campaigns' %}">Communities</a></li>
-                {% if user.is_authenticated %}
-                        <li><a href="{% url 'startFundraiser:campaigns' %}">Howdy {{ request.user }}!</a></li>
-                        {% else %}
-                        <li><a href="{% url 'register:user_register' %}">SignUp</a></li>
-                        <li><a href="{% url 'register:user_login' %}">Login</a></li>
-                        {% endif%}
-            </ul>
-            {% block search %}{% endblock %}
-        </nav>
-       {% block bg_img %}{% endblock %}
-
-    </div>
-</header>
-        <!-- Header Ends -->
-
-    {% block content %}
-        <!--Preloader-->
-        <div id="preloader">
-            <div id="status">&nbsp;</div>
-        </div>
-
-        <!-- Home -->
-        <section id="home">
-            <!-- Background Video -->
-            <video id="home-bg-video" poster="{% static 'startFundraiser/images/bg_1.jpg' %}" autoplay loop muted>
-                <source src="{% static 'startFundraiser/videos/helpig.mp4' %}" type="video/mp4">
-            </video>
-
-            <!-- Overlay -->
-            <div id="home-overlay"></div>
-
-        <!-- Overlay -->
-        <div id="home-content" class="text-center">
-            <div id ="home-content-inner">
-                <div id="home-heading">
-
-                    <h1 id="home-heading-1"><span>Ice<strong>Breaker</strong></span></h1>
-                    <br>
-                    <h1 id="home-heading-2">Make your ideas live!</h1>
-                    <br><br><br>
-                </div>
-                <div id="home-btn">
-                    <a class="btn btn-general btn-home" href="{% url 'startFundraiser:campaigns' %}" title="Explore" role="button">Explore</a>
-                </div>
-            </div>
-        </div>
-        </section>
-
-        <!-- Top Fundraiser -->
-        <section id="campaigns">
-            <div class="container-box-lg">
-
-                    <div class="row">
-                        <div class="col-md-6" style="text-align: center">
-
-                        <h2 style="align-content: center">Top Fundraisers</h2>
-                    </div>
-
-
-                    <div class="col-md-6">
-
-                        <div id="demo" class="carousel slide" data-ride="carousel">
-                          <ul class="carousel-indicators">
-                            <li data-target="#demo" data-slide-to="0" class="active"></li>
-                            <li data-target="#demo" data-slide-to="1"></li>
-                            <li data-target="#demo" data-slide-to="2"></li>
-                          </ul>
-                        {% for campaign in most_liked %}
-                        <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <a href="{% url 'startFundraiser:campaign_detail' campaign.id %}">
-                            <img class="card-img-top img-responsive" src="{{ campaign.image.url }}" style="width: 50px; height: 100px; align-content: center" alt="{{ campaign.campaign_Title }}">
-                          </a>
-                          <div class="carousel-caption">
-                            <h3><a href="{% url 'startFundraiser:campaign_detail' campaign.id %}">
-                            {{ campaign.campaign_Title }}</a>
-                            </h3>
-                            <p>{{ campaign.campaign_Tagline }}</p>
-
-                            <div class="progress custom-progress-success">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <span class="fund-raised d-block">&#8377;{{ campaign.pledged }} raised of &#8377;{{ campaign.goal }}</span>
-                            </div>
-                          </div>
-                        </div>
-                        </div>
-                        {% endfor %}
-
-                            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                            <span class="carousel-control-prev-icon"></span>
-                          </a>
-                          <a class="carousel-control-next" href="#demo" data-slide="next">
-                            <span class="carousel-control-next-icon"></span>
-                          </a>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <!-- End Top Fundraisers-->
-
-
-
-
-        <section>
-        </section>
-    {% endblock %}
-        <!-- scripts -->
-	    <script src="{% static 'startFundraiser/js/jquery.js' %}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="{% static 'startFundraiser/js/script.js' %}"></script>
-
-        <script type="text/javascript">
-            $(window).on('scroll', function() {
-                if($(window).scrollTop()){
-                    $('nav').addClass('black');
-                }
-                else{
-                    $('nav').removeClass('black');
-                }
-
-            })
-
-        </script>
-    </body>
+</body>
 </html>
-
