--- a/Icebreaker/startFundraiser/static/startFundraiser/style.css
+++ b/Icebreaker/startFundraiser/static/startFundraiser/style.css
@@ -20,12 +20,11 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: "Raleway", sans-serif;
-  color: #0c5460;
 }
 p {
-    font-family: "Raleway", sans-serif;
-    font-size: 20px;
-    font-weight: 300;
+    font-family: "Open Sans", sans-serif;
+    font-size: 13px;
+    font-weight: 400;
     line-height: 24px;
 }
 section {
@@ -84,7 +83,7 @@ section {
     background-size: cover;
 }
 #home-overlay {
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.8);
     width: 100%;
     height: 100%;
     position: fixed;
@@ -114,16 +113,6 @@ section {
     margin: 8px 0 30px 0px;
 }
 
-/* Content-box */
-.content-box-lg {
-    padding: 120px 0;
-}
-
-.content-box-md {
-    padding: 100px 0;
-}
-/**/
-
 /* Buttons */
 .btn-general {
     font-family: 'sans-serif', Raleway;
@@ -133,30 +122,6 @@ section {
     padding: 12px 46px 17px 46px;/*internal spacing */
     -webkit-transition: all .4s;
     transition: all .4s;
-}
-
-.button {
-  background-color: #0c5460;
-  font-family: 'sans-serif', Raleway;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-}
-
-.button1 {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.button2:hover {
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .btn-home {
@@ -170,74 +135,47 @@ section {
 
 }
 
-/* NAVBAR */
 /* Navigation */
+.navbar {
+    padding: 35px 0 20px 0;
+    }
 
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    padding: 10px 100px;
-    box-sizing: border-box;
-    transition: .3s;
-}
-
-nav.black {
-    background: rgba(0,0,0,0.8);
-    height: 100px;
-    padding: 10px 100px;
-    -webkit-transition-delay: 1s ;
-    -webkit-transition-property: -webkit-transform ;
-    -moz-transition-property: -moz-transform;
-    z-index: 1;
-}
-
-nav .logo {
-    padding: 22px 20px;
-    height: 80px;
-    float: left;
-    font-size: 24px;
-    transition: .3s;
-}
-
-nav.black .logo{
-    color: #f7f7f7;
-}
-
-nav ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li {
-    list-style: none;
-}
-
-nav ul li a {
-    line-height: 80px;
-    color: #d39e00;
-    padding: 12px 30px;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: .3s;
-}
-
-nav.black ul li a{
+.navbar-brand{
     color: #0c5460;
+    font-family: 'Raleway', sans-serif;
 }
 
-section.sec1{
-    width: 100%;
-    height: 30vh;
-    background-size: cover;
-    background-position: center ;
+.navbar-brand:hover, .navbar-brand:focus {
+    color: #0c5460;
+    font-family: 'Raleway', sans-serif;
 }
-/* END NAV */
+
+.site-nav-wrapper {
+    padding: 0 50px 0 50px;
+}
+
+ul.navbar-nav > li > a {
+    font-family: 'Raleway', sans-serif;
+    color: #d39e00;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: 1px;
+}
+
+a, li {
+    color: #0c5460;
+    text-decoration: None;
+}
+
+#links{
+    display: inline-block;
+}
+
+ul.navbar-nav > li > a:hover,
+ul-navbar-nav > li > a:focus {
+    background: none;
+    color: #d39e00;
+}
 
 /* Side nav */
 /*
@@ -248,16 +186,15 @@ section.sec1{
 */
 .thumbnail{
     width : 100%;
-    height: 650px;
-    overflow: hidden;
-  margin-left: 16%;
-  margin-top: 8%;
+    height: 500px;
+    overflow: auto;
 }
 
-.thumbnail img-top{
+.thumbnail img{
+
     width: 100%;
-    height: 20vw;
-  object-fit: cover;
+    height: auto;
+    display: block;
 }
 
 .update {
@@ -266,12 +203,6 @@ section.sec1{
 .main {
     max-width: 1000px;
     margin: auto;
-}
-
-.thumbnail:hover{
-  -webkit-box-shadow: -1px 9px 40px -12px #0c5460;
-  -moz-box-shadow: -1px 9px 40px -12px #0c5460;
-  box-shadow: -1px 9px 40px -12px #0c5460;
 }
 
 .row {
@@ -310,4 +241,3 @@ section.sec1{
         width: 50%;
     }
 }
-
