--- a/Icebreaker/startFundraiser/templates/startFundraiser/add_faq.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/add_faq.html
@@ -1,21 +1,9 @@
-{% extends 'startFundraiser/home.html' %}
-{% load static %}
-
-{% load crispy_forms_tags %}
-
-{% block bg_img %}
-<section class="sec1">
-
-    <img src="{% static 'startFundraiser/images/bg_2.jpg' %}">
-
-</section>
-{% endblock %}
+{% extends 'startFundraiser/base.html' %}
 
 {% block content %}
-<br><br><br><br><br><br>
     <h1>FAQs</h1>
-    <form method="POST" class="post-form" style="margin-left: 20px; margin-right: 20px;">{% csrf_token %}
-        {% crispy form %}
+    <form method="POST" class="post-form">{% csrf_token %}
+        {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Add</button>
     </form>
 {% endblock %}
