--- a/Icebreaker/startFundraiser/templates/startFundraiser/add_update.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/add_update.html
@@ -1,4 +1,4 @@
-{% extends 'startFundraiser/home.html' %}
+{% extends 'startFundraiser/base.html' %}
 
 {% block content %}
     <h1>New update</h1>
