--- a/Icebreaker/startFundraiser/templates/startFundraiser/base.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -22,50 +22,76 @@
     </head>
 
     <body>
-    <!-- Header -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-            <div class="container">
-                <a class="navbar-brand" href="{% url 'startFundraiser:home' %}" style="color: #d39e00">ice<strong>Breaker</strong></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="oi oi-menu"></span> Menu
-                </button>
-                <div class="collapse navbar-collapse" id="ftco-nav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item" ><a href="{% url 'startFundraiser:start_campaign' %}" class="nav-link">Start Fundraiser</a></li>
-                        <li class="nav-item" ><a href="{% url 'startFundraiser:start_campaign' %}" class="nav-link">Volunteer</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="{% url 'startFundraiser:campaigns' %}" role="button" aria-haspopup="true" aria-expanded="false">Explore</a>
-                                    <div class="dropdown-menu">
-                                      <a class="dropdown-item" href="{% url 'startFundraiser:campaigns' %}">Campaigns</a>
-                                      <a class="dropdown-item" href="{% url 'startFundraiser:creative' %}">Creative</a>
-                                      <a class="dropdown-item" href="{% url 'startFundraiser:social' %}">Social</a>
-                                      <a class="dropdown-item" href="{% url 'marketplace:products_blog' %}">Marketplace</a>
-                                      <a class="dropdown-item" href="{% url 'startFundraiser:tech' %}">Tech &amp; Innovation</a>
-                                      <div class="dropdown-divider"></div>
-                                      <a class="dropdown-item" href="#">Communities</a>
-                                    </div>
-                        </li>
-                        {% if user.is_authenticated %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="{% url 'startFundraiser:campaigns' %}" role="button" aria-haspopup="true" aria-expanded="false">Howdy {{ request.user }}!</a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">My Campaigns</a>
-                                    <a class="dropdown-item" href="#">My Contributions</a>
-                                    <a class="dropdown-item" href="#">Profile</a>
-                                    <a class="dropdown-item" href="{% url 'register:user_logout' %}">Logout</a>
+        <script type="text/javascript">
+          $(document).ready(function(event){
+            $(document).on('click','#like',function(event){
+              event.preventDefault();
+              var id = {{ campaign1.id }};
+              $.ajax({
+                type: 'POST',
+                url: '{% url "startFundraiser:like_camp" %}',
+                data: {'id':id, 'csrfmiddlewaretoken':'{{ csrf_token }}'},
+                dataType: 'json',
+                success: function(response){
+                  $('#like-section').html(response['form'])
+                  console.log($('#like-section').html(response['form']));
+                },
+                error: function(rs, e){
+                  console.log(rs.responseText);
+                },
+              });
+            });
+          });
+        </script>
+
+
+        <!-- Header -->
+<header>
+    <nav class="navbar navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="site-nav-wrapper">
+                <div class="navbar-header">
+                    <form class="navbar-form navbar-right" action="{% url 'startFundraiser:index' %}" name="q" id="q">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Discover" name="q" id="q">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="Submit"><i class="glyphicon glyphicon-search" style="float: right"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                    <ul class="nav navbar-nav pull-right" id="links">
+                        <li class="nav-item" id="links"><a class="navbar-brand" href="{% url 'startFundraiser:home' %}" >ice<strong>Breaker</strong></a></li>
+                        <li class="nav-item" id="links"><a href="{% url 'startFundraiser:start_campaign' %}">Start Fundraiser</a></li>
+                        <li class="nav-item dropdown" id="links">
+                            <a class="nav-link dropdown-toggle" href="{% url 'startFundraiser:campaigns' %}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Explore
+                            </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                                  <a class="dropdown-item" href="{% url 'startFundraiser:campaigns' %}">All Campaigns</a>
+                                  <a class="dropdown-item" href="{% url 'startFundraiser:creative' %}">Creative</a>
+                                  <a class="dropdown-item" href="{% url 'startFundraiser:social' %}">Social</a>
+                                  <a class="dropdown-item" href="{% url 'marketplace:products_blog' %}">Marketplace</a>
+                                  <a class="dropdown-item" href="{% url 'marketplace:my_products' %}">My Products</a>
+                                  <a class="dropdown-item" href="{% url 'startFundraiser:tech' %}">Tech &amp; Innovation</a>
+                                  <div class="dropdown-divider"></div>
+                                  <a class="dropdown-item" href="#">Communities</a>
                                 </div>
                         </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item" id="links"><a href="{% url 'register:user_logout' %}">Logout</a></li>
+                        hii {{ request.user }}
                         {% else %}
-                        <li class="nav-item"><a href="{% url 'register:user_register' %}" class="nav-link">SignUp</a></li>
-                        <li class="nav-item"><a href="{% url 'register:user_login' %}" class="nav-link">Login</a></li>
+                        <li class="nav-item" id="links"><a href="{% url 'register:user_register' %}">SignUp</a></li>
+                        <li class="nav-item" id="links"><a href="{% url 'register:user_login' %}">Login</a></li>
                         {% endif%}
                     </ul>
                 </div>
             </div>
-        </nav>
-    </header>
-    <!-- Header Ends -->
+        </div>
+    </nav>
+</header>
+        <!-- Header Ends -->
 
     {% block content %}
         <!--Preloader-->
@@ -101,75 +127,46 @@
         </section>
 
 
-  <div class="site-section">
-    <div class="container">
-      <div class="row">
+        <section>
+          <br><br><br><br>
+          <div class="main">
+            <h1>Trending Now</h1>
+            <hr>
+            <!-- Portfolio Gallery Grid -->
+              <div class="row">
+                  {% for trends in trending %}
+                    <div class="column">
+                        <div class="content">
+                          <a href = ""><img src="{{trends.image.url}}"  style="width:250px;height:450px;"/></a>
+                          <h4> <span class="label label-default">Domain</span></h4>
+                          <h4><a style="color:inherit;" href = "{% url 'startFundraiser:campaign_detail' campaign_id=trends.pk %}">{{trends.campaign_Title}}</a></h4>
 
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="flaticon-heart-box"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Shop</h3>
-              <p>Get your hands on the most innovative and clever products.</p>
-              <p><a href="#">Shop</a></p>
-            </div>
+                          <h6>by</h6> <h5>{{trends.user}}</h5>
+
+                        <!--  <p>{{trends.pk}}</p>-->
+                          <p>{{trends.overview}}</p>
+
+                          <hr>
+                          <a href="https://api.whatsapp.com/send?phone=&text={{trends.image.url }} {{ trends.campaign_Title }} {{ trends.overview }}"><img style="height:25px;width:30px;align:left;" src="{% static 'images/share.jpg' %}" alt="share"></a>
+                          <a href="#"><img style="height:25px;width:25px;align:left;" src="{% static 'images/Capture1.jpg' %}" alt="like"></a>
+                        </div>
+                    </div>
+
+
+                  {% endfor %}
+            <!-- END GRID -->
+              </div>
+            <!-- END MAIN -->
           </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="flaticon-donate"></span></div>
-            <div class="media-body">
-              <h3 class="heading">Contribute</h3>
-              <p>Support campaigns.</p>
-              <p><a href="#">Support It</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="media block-6">
-            <div class="icon"><span class="flaticon-people"></span></div>
-            <div class="media-body">
-              <h3 class="heading">We Need Volunteers</h3>
-              <p>Form your own community and also volunteer.</p>
-              <p><a href="#">Volunteer</a></p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div> <!-- .site-section -->
+        </section>
 
 
     {% endblock %}
-
-         <script type="text/javascript">
-          $(document).ready(function(event){
-            $(document).on('click','#like',function(event){
-              event.preventDefault();
-              var id = {{ campaign1.id }};
-              $.ajax({
-                type: 'POST',
-                url: '{% url "startFundraiser:like_camp" %}',
-                data: {'id':id, 'csrfmiddlewaretoken':'{{ csrf_token }}'},
-                dataType: 'json',
-                success: function(response){
-                  $('#like-section').html(response['form'])
-                  console.log($('#like-section').html(response['form']));
-                },
-                error: function(rs, e){
-                  console.log(rs.responseText);
-                },
-              });
-            });
-          });
-        </script>
-	<script src="{% static 'startFundraiser/js/jquery.js' %}"></script>
+        <!-- scripts -->
+	    <script src="{% static 'startFundraiser/js/jquery.js' %}"></script>
+	    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="{% static 'startFundraiser/js/script.js' %}"></script>
-    {% block custom_js %}{% endblock %}
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="{% static 'startFundraiser/js/script.js' %}"></script>
     </body>
 </html>
