--- a/Icebreaker/startFundraiser/templates/startFundraiser/campaigns.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/campaigns.html
@@ -1,61 +1,40 @@
-
-{% extends 'startFundraiser/home.html' %}
-{% load static %}
-{% load mathfilters %}
+{% extends 'startFundraiser/base.html' %}
 {% block title %}Campaigns|iceBreaker{% endblock %}
 
-{% block bg_img %}
-<section class="sec1">
-
-    <img src="{% static 'startFundraiser/images/bg_2.jpg' %}">
-
-
-</section>
-{% endblock %}
-
-{% block search %}
-
-{% endblock %}
-
 {% block content %}
+<!-- Side nav  -->
+<div class="wrapper">
+    <nav id="sidebar">
+        <div class="sidebar-header" style="font-size: 30px">Filter</div>
 
-<br><br><br><br><br><br>
+    <p>Project Type</p>
+        <ul type="None">
+            <li><a href="{% url 'startFundraiser:campaigns' %}">All Campaigns</a></li>
+            <li><a href="{% url 'startFundraiser:campaigns' %}">Marketplace</a></li>
+            <li><a href="{% url 'startFundraiser:campaigns' %}">Communities</a></li>
+        </ul>
+
+    <p>Collections</p>
+        <ul type="None" style="margin-left: auto">
+            <li><a href="{% url 'startFundraiser:creative' %}">Creative</a></li>
+            <li><a href="{% url 'startFundraiser:social' %}">Social</a></li>
+            <li><a href="{% url 'startFundraiser:tech' %}">Tech &amp; Innovation</a></li>
+        </ul>
+    </nav>
+</div>
 <!-- Side nav -->
-
             {% for project in projects %}
-                <div class="col-sm-4 col-lg-3 ml-4">
+                <div class="col-sm-4 col-lg-3">
                     <div class="thumbnail">
                         <a href="{% url 'startFundraiser:campaign_detail' project.id %}">
                             <img  src="{{ project.image.url }}" alt="Card image cap" class="img-responsive">
                         </a>
                         <div class="caption">
-                            <a href="{% url 'startFundraiser:campaign_detail' project.id %}"><h3 class="card-title"><strong>{{ project.campaign_Title }}</strong></h3></a>
+                            <a href="{% url 'startFundraiser:campaign_detail' project.id %}"><h5 class="card-title">{{ project.campaign_Title }}</h5></a>
                             <p class="card-text">{{ project.campaign_Tagline }}</p>
                         </div>
                         <div class="caption">
-                            <p class="card-title" style="color: #d39e00; font-size: 25px">{{ project.campaign_Category|upper }}</p>
-                        </div>
-                        <div class="caption">
-                            <h3 class="card-title">&#8377;{{ project.goal }}</h3>
-                        </div>
-                        <div class="row">
-                        <div class="caption col-sm-6">
-                            <h3 class="card-title">{{ project.pledged|div:project.goal|mul:100|floatformat}}% funded</h3>
-                        </div>
-                        <div class="caption col-sm-6 ">
-                            <h3 class="card-title">{{ project.pledged }} raised</h3>
-                        </div>
-                        </div>
-                        <div class="progress">
-                            {% with per=project.pledged|div:project.goal|mul:100|floatformat %}
-                            <h4 class="progress-bar progress-bar-success" role="progressbar" style="width: {{ per }}%">{{ per }}% funded</h4>
-                            {% endwith %}
-                        </div>
-                        <div class="caption">
-                            <h4 class="card-title">{{ project.end_Date|sub:project.start_Date|truncatewords:1 }}days left</h4>
-                        </div>
-                        <div class="caption">
-                            <p class="card-title" style="color: #d39e00;font-size: 20px">{{ project.campaign_status|capfirst }}</p>
+                            <h5 class="card-title">&#8377;{{ project.goal }}</h5>
                         </div>
                     </div>
                 </div>
@@ -63,28 +42,4 @@
             {% endfor %}
 
 
-{% endblock %}
-
-{% block custom_js %}
-<script>
-$(document).ready(function() {
-    $('.col-lg-3').hover(
-        function() {
-            $(this).animate({
-            marginLeft:'+=0.1%',
-            },200);
-          
-        },
-
-        function() {
-            $(this).animate({
-            marginLeft:'0%',
-            },200);
-
-        }
-    );
-  
-});
-
-</script>
 {% endblock %}
