--- a/Icebreaker/startFundraiser/templates/startFundraiser/view_post.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/view_post.html
@@ -1,4 +1,4 @@
-{% extends 'startFundraiser/home.html' %}
+{% extends "startFundraiser/base.html" %}
 
 {% block content %}
 {% for post in posts %}
