--- a/Icebreaker/polls/templates/polls/detail.html
+++ b/Icebreaker/polls/templates/polls/detail.html
@@ -3,42 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+        th{text-align: left;color: #026670}
+
+        input[type=submit] {
+          background-color: #026670;
+          color: white;
+          padding: 12px 20px;
+          border: none;
+          border-radius: 10px;
+          cursor: pointer;
+        }
+
+        input[type=submit]:hover {
+          background-color: #92C5F0;
+        }
+
+
+    </style>
 </head>
-<body>
-{% if c == 1 %}
-    <h1>Details of query</h1>
+<body style="background-color:#026670;font-family: Arial;">
+<h1 style="text-align: center;color:white;">Details of query</h1>
+<div class="container" style="margin-left:250px;margin-right:250px;border: 2px solid white;;border-radius:15px;background-color:white">
    {% for temp in  context %}
-<div style="font-size:20px;" >
-        Name:{{ temp.name }}<br>
-        Email id: {{ temp.email }}<br>
-        Asked Question:{{ temp.question_text }}<br>
-</div>
+<div style="font-size:20px;margin-left:20px;margin-top:50px;" >
+       <table>
+       <tr><th>Name </th><td> :{{ temp.name }}</td></tr>
+       <tr> <th>EmailId</th>  <td> :{{ temp.email }}</td></tr>
+        <tr> <th>Query</th> <td>:{{ temp.question_text }}</td></tr>
+       </table>
 {% endfor %}
+ </div>
+    <h2 style="margin-left:20px;color: #026670">Answer:</h2>
 
-
-    <h2>Answer:</h2>
-
-    <form method="POST">
+    <form id="mail_sending_form" action="{% url 'polls:sendmail' %}" method='POST' style="margin-left:20px;">
        {% csrf_token %}
-
-        <textarea rows="4" cols="50" name="answer" id="answer">
-
-        </textarea>
-        <br>
+        <textarea rows="15" cols="50" name="answer" id="answer" style="border-radius: 15px;">
+        </textarea><br>
      {% for temp in  context %}
-         <h3>Email:</h3><br>
-     <input type="text" name="email" value="{{ temp.email }}">
-      <br>
-
+      <span>
+          <h3 style="margin-left:20px;color: #026670">Email: <input type="text" name="email" value="{{ temp.email }}"></h3><br>
+      </span>
         {% endfor %}
-     <br>
-     <div>
+     <div style="margin-left:20px;margin-bottom:20px;">
          <input type="submit"  value="send"  >
-   <!-- <input type="button" id="buttonId" name="_mail" value="Enviar Mail">-->
-</div>
+     </div>
     </form>
-{% else %}
-<h1>answer sent</h1>
-{% endif %}
+
+</div>
+
 </body>
 </html>
