--- a/Icebreaker/startFundraiser/templates/startFundraiser/home.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/home.html
@@ -1,10 +1,171 @@
+
+
+{% load staticfiles %}
+{% load mathfilters %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+   <head>
+      <!-- meta tags -->
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <!-- Google fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <!-- Custom CSS -->
+      <link rel="stylesheet" href="{% static 'startFundraiser/style.css' %}">
+      <link rel="shortcut icon" href="{%  static 'startFundraiser/favicon.ico' %}">
+      <title>{% block title %}IceBreaker{% endblock %}</title>
+   </head>
+   <body>
+      <!--Header-->
+      <header>
+         <div class="wrapper">
+            <nav>
+               <div class="logo"><a href="{% url 'startFundraiser:home' %}" class="logo-des">ice<strong>Breaker</strong></a></div>
+               <ul>
+                  <li><a href="{% url 'startFundraiser:start_campaign' %}">Start Campaign</a></li>
+                  <li><a href="{% url 'startFundraiser:start_campaign' %}">Volunteer</a></li>
+                  <li><a class="active" href="{% url 'startFundraiser:campaigns' %}">Explore</a></li>
+                  <li><a class="active" href="{% url 'startFundraiser:campaigns' %}">Marketplace</a></li>
+                  <li><a class="active" href="{% url 'startFundraiser:campaigns' %}">Communities</a></li>
+                  <li><a class="active" href="{% url 'polls:query_view' %}">Contact Us</a></li>
+                  {% if user.is_authenticated %}
+                  <li><a href="{% url 'startFundraiser:campaigns' %}">Howdy {{ request.user }}!</a></li>
+                  {% else %}
+                  <li><a href="{% url 'register:user_register' %}">SignUp</a></li>
+                  <li><a href="{% url 'register:user_login' %}">Login</a></li>
+                  {% endif%}
+               </ul>
+               {% block search %}{% endblock %}
+            </nav>
+            {% block bg_img %}{% endblock %}
+         </div>
+      </header>
+      <!-- Header Ends -->
 
-</body>
+
+      {% block content %}
+
+      <!--Preloader-->
+      <div id="preloader">
+         <div id="status">&nbsp;</div>
+      </div>
+
+      <!-- Home -->
+      <section id="home">
+         <!-- Background Video -->
+         <video id="home-bg-video" poster="{% static 'startFundraiser/images/bg_1.jpg' %}" autoplay loop muted>
+            <source src="{% static 'startFundraiser/videos/helpig.mp4' %}" type="video/mp4">
+         </video>
+         <!-- Overlay -->
+         <div id="home-overlay"></div>
+         <!-- Overlay -->
+         <div id="home-content" class="text-center">
+            <div id ="home-content-inner">
+               <div id="home-heading">
+                  <h1 id="home-heading-1"><span>Ice<strong>Breaker</strong></span></h1>
+                  <br>
+                  <h1 id="home-heading-2">Make your ideas live!</h1>
+                  <br><br><br>
+               </div>
+               <div id="home-btn">
+                  <a class="btn btn-general btn-home" href="{% url 'startFundraiser:campaigns' %}" title="Explore" role="button">Explore</a>
+               </div>
+            </div>
+         </div>
+      </section>
+
+      <!--Features-->
+      <section class="counting-sec">
+         <div class="container-box-lg" >
+            <div class="row">
+               <div class="col-12 col-sm-6 col-lg-4">
+                  <div class="single-cool-fact-area text-center mb-100">
+                     <i id="icons" class='fas fa-shopping-cart'></i>
+                     <br><br>
+                     <h2 class="num">564</h2>
+                     <h2>Innovative Products</h2>
+                     <p>Get your hands on the most innovative and clever products.</p>
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6 col-lg-4">
+                  <div class="single-cool-fact-area text-center mb-100">
+                     <i id="icons" class='fas fa-donate'></i>
+                     <br><br>
+                     <h2 class="num">564</h2>
+                     <h2 class="heading">Campaigns</h2>
+                     <p>Support campaigns.</p>
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6 col-lg-4">
+                  <div class="single-cool-fact-area text-center mb-100">
+                     <i id="icons" class='fas fa-hands-helping'></i>
+                     <br><br>
+                     <h2 class="num">896</h2>
+                     <h2 class="heading">Communities</h2>
+                     <p>Form your own community and also volunteer.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- Top Fundraiser -->
+      <section class="funds-sec">
+         <div class="container-box-lg">
+            <div class="featured-donate overlay-color"></div>
+               <div class="row">
+                  <div class="col-lg-4">
+                     <img src="{{ most_liked.image.url }}" id="image" alt="{{ most_liked.campaign_Title }}" class="img-fluid">
+                  </div>
+                  <div class="col-lg-7">
+                     <h1>
+                     Top Fundraiser
+                     <h1>
+                     <br>
+                     <h2 id="class3">{{ most_liked.campaign_Title }}</h2>
+                     <p id="class3">{{ most_liked.campaign_Tagline }}</p>
+                     <div class="progress">
+                        {% with per=most_liked.pledged|div:most_liked.goal|mul:100|floatformat %}
+                        <h4 class="progress-bar progress-bar-success" role="progressbar" style="width: {{ per }}%">{{ per }}% funded</h4>
+                        {% endwith %}
+                     </div>
+                     <h2 class="class3">{{ most_liked.pledged }} raised of {{ most_liked.goal }}</h2>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      {% endblock %}
+      <!-- End Top Fundraisers-->
+
+      <!--Footer-->
+      <section class="footer-sec">
+         <footer class="footer">
+            <div class="row pt-5">
+               <div class="col-md-12 text-center">
+                  <p>
+                     Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                  </p>
+               </div>
+            </div>
+         </footer>
+      </section>
+
+      <!-- scripts -->
+      <script src="{% static 'startFundraiser/js/jquery.js' %}"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <script src="{% static 'startFundraiser/js/script.js' %}"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+      <script type="text/javascript">
+         $(".num").counterUp({delay:10,time:1000});
+      </script>
+   </body>
 </html>
+
