--- a/Icebreaker/marketplace/templates/marketplace/product_details.html
+++ b/Icebreaker/marketplace/templates/marketplace/product_details.html
@@ -1,5 +1,6 @@
-{% extends 'startFundraiser/base.html' %}
+{% extends 'startFundraiser/home.html' %}
 {% block content %}
+<br><br><br><br><br><br>
 <div class="trend-details">
   <div class="img">
     <img src="{{ details.image.url }}"/>
