--- a/Icebreaker/marketplace/templates/marketplace/productsblog.html
+++ b/Icebreaker/marketplace/templates/marketplace/productsblog.html
@@ -1,5 +1,6 @@
-{% extends 'startFundraiser/base.html' %}
+{% extends 'startFundraiser/home.html' %}
 {% block content %}
+<br><br><br><br><br><br>
 {% load static from staticfiles %}
   <div class="main">
     <h1>products</h1>
