--- a/Icebreaker/marketplace/templates/marketplace/my_products.html
+++ b/Icebreaker/marketplace/templates/marketplace/my_products.html
@@ -1,5 +1,6 @@
-{% extends 'startFundraiser/base.html' %}
+{% extends 'startFundraiser/home.html' %}
 {% block content %}
+<br><br><br><br><br><br>
 <form class="" action="{% url 'marketplace:add_product' %}" method="post">
   {% csrf_token %}
   <input type="submit"  value="ADD Product">
