--- a/Icebreaker/startFundraiser/templates/startFundraiser/like_section.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/like_section.html
@@ -2,9 +2,9 @@
 <form action="{% url 'startFundraiser:like_camp' %}" method="post">
   {% csrf_token %}
   {% if is_liked %}
-     <button type="submit" id="like" name="camp_id" value="{{ campaign1.id }}">Dislike</button>
+     <button type="submit" class="button button2" id="like" name="camp_id" value="{{ campaign1.id }}">Dislike</button>
   {% else %}
-     <button type="submit" id="like" name="camp_id" value="{{ campaign1.id }}">Like</button>
+     <button type="submit" class="button button2" id="like" name="camp_id" value="{{ campaign1.id }}">Like</button>
   {% endif %}
 </form>
 {% endif %}
