--- a/Icebreaker/startFundraiser/templates/startFundraiser/home.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/home.html
@@ -117,7 +117,7 @@
       <!-- Top Fundraiser -->
       <section class="funds-sec">
          <div class="container-box-lg">
-            <div class="featured-donate overlay-color"></div>
+            <div class="featured-donate overlay-color">
                <div class="row">
                   <div class="col-lg-4">
                      <img src="{{ most_liked.image.url }}" id="image" alt="{{ most_liked.campaign_Title }}" class="img-fluid">
@@ -168,4 +168,3 @@
       </script>
    </body>
 </html>
-
