--- a/Icebreaker/startFundraiser/templates/startFundraiser/detail.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/detail.html
@@ -34,19 +34,21 @@
       </div>
       {% endif %}
       <div class="btn-group">
-         <button type="button" class="button button2" style="color: #d39e00"><span class="glyphicon glyphicon-edit"><a href="{% url 'startFundraiser:add_comment' campaign1.id %}" style="color: #d39e00"> Comments</a></span></button>
-         {% if user.is_authenticated %}
-         <form action="{% url 'startFundraiser:like_camp' %}" method="post">
-            {% csrf_token %}
-            {% if is_liked %}
-            <button type="submit" class="button button2" style="color: #d39e00" id="like" name="camp_id" value="{{ campaign1.id }}">Dislike</button>
-            {% else %}
-            <button type="submit" class="button button2" style="color: #d39e00" id="like" name="camp_id" value="{{ campaign1.id }}">Like</button>
-            {% endif %}
-         </form>
-         {% endif %}
+         <button type="button" class="button button2" style="color: #d39e00"><span class="glyphicon glyphicon-edit"><a href="{% url 'startFundraiser:add_comment' campaign1.id %}" style="color: #d39e00"> Comments</a></span></button>&nbsp;
       </div>
-      {{ total_likes }} Likes
+      <div id="like-section">
+        {% if user.is_authenticated %}
+        <form action="{% url 'startFundraiser:like_camp' %}" method="post">
+          {% csrf_token %}
+          {% if is_liked %}
+             <button type="submit" id="like" name="camp_id" value="{{ campaign1.id }}">Dislike</button>
+          {% else %}
+             <button type="submit" id="like" name="camp_id" value="{{ campaign1.id }}">Like</button>
+          {% endif %}
+        </form>
+        {% endif %}
+        {{ total_likes }} Likes
+      </div>
       <br>
       <br>
       <div class="row">
@@ -190,4 +192,3 @@
 </div>
 {% endif %}
 {% endblock %}
-
