--- a/Icebreaker/startFundraiser/static/startFundraiser/style.css
+++ b/Icebreaker/startFundraiser/static/startFundraiser/style.css
@@ -90,8 +90,12 @@ section1 {
 
 .footer-sec{
     padding: 40px 0;
+    font-size: 20px;
+    text-align: center;
+    font-family: Raleway;
+    color: #0f74a8;
     width: 100%;
-    background: linear-gradient(90deg,#f5f5f5,#0c5460);
+    background: linear-gradient(90deg,#f5f5f5,#6c757d);
 }
 
 
@@ -257,8 +261,12 @@ nav.black {
 }
 
 nav .logo {
-    padding: 22px 20px;
+    top: 0;
+    padding: 22px 10px;
+    margin-top: auto;
     height: 80px;
+    font-family: Raleway;
+    color: #0f74a8;
     float: left;
     font-size: 30px;
     transition: .3s;
@@ -282,6 +290,8 @@ nav ul li {
 
 nav ul li a {
     line-height: 80px;
+    font-size: 15px;
+    font-family: Raleway;
     color: #ffcc33;
     padding: 12px 30px;
     text-decoration: none;
@@ -291,6 +301,8 @@ nav ul li a {
 
 nav.black ul li a{
     color: #0f74a8;
+    font-family: Raleway;
+    font-size: 15px;
 }
 
 section.sec1{
@@ -299,6 +311,7 @@ section.sec1{
     background-size: cover;
     background-position: center ;
 }
+
 /* END NAV */
 
 /* Side nav */
@@ -310,7 +323,7 @@ section.sec1{
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: #111;
+    background-color: #d39e00;
     overflow-x: hidden;
     padding-top: 20px;
 }
@@ -318,13 +331,14 @@ section.sec1{
 .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-size: 25px;
-    color: #818181;
+    font-family: Raleway;
+    font-size: 20px;
+    color: #f5f5f5;
     display: block;
 }
 
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: #0f74a8;
 }
 
 @media screen and (max-height: 450px) {
@@ -411,4 +425,27 @@ section.sec1{
 .camp_status {
     color: #d39e00;
     font-size: 20px;
+}
+
+.progress, .progress-bar {
+    height:30px;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
 }
