--- a/Icebreaker/marketplace/templates/marketplace/my_products.html
+++ b/Icebreaker/marketplace/templates/marketplace/my_products.html
@@ -65,8 +65,8 @@
             <hr>
 
               <p>{{mypro.snippept}}</p>
-              <p>Quantity: Rs.{{mypro.quantity}}</p>
-              <p>Cost: {{mypro.cost}}</p>
+              <p><b>Quantity: </b>Rs.{{mypro.quantity}}</p>
+              <p><b>Cost: </b>{{mypro.cost}}</p>
             <!--  <p>SoldOut: {{mypro.sold}}</p>-->
             </div>
             &nbsp&nbsp&nbsp&nbsp&nbsp
@@ -75,7 +75,6 @@
         </div>
     </div>
     {% endfor %}
-    <h3>BoughtProducts</h3>
-    <hr>
+
 </div>
 {% endblock %}
