--- a/Icebreaker/marketplace/templates/marketplace/test.html
+++ b/Icebreaker/marketplace/templates/marketplace/test.html
@@ -9,24 +9,29 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <style >
+      .opacity {
+        background: ;
+      }
 
+    </style>
   </head>
 
   <body>
     <!--navbar-->
-    <ul id="dropdown1" class="dropdown-content">
-      <li><a href="{% url 'register:user_logout' %}">Logout</a></li>
+    <ul id="dropdown1" class="dropdown-content ">
+      <li><a style="color:blue" href="{% url 'register:user_logout' %}">Logout</a></li>
     </ul>
     <nav>
-      <div class="nav-wrapper cyan darken-4">
-        <a href="{% url 'startFundraiser:home' %}" class="brand-logo">IceBreaker</a>
+      <div class="nav-wrapper black lighten-1" >
+        <a style="color:blue" href="{% url 'startFundraiser:home' %}" class="brand-logo">IceBreaker</a>
         <ul class="right hide-on-med-and-down">
 
-          <li><a href="{% url 'marketplace:products_blog' %}">blog</a></li>
-          <li><a href="{% url 'marketplace:add_product' %}">Add Products</a></li>
-          <li><a href="{% url 'marketplace:my_products' %}">My Product</a></li>
-          <li><a href="{% url 'marketplace:add_tocart' %}"><i class="fas fa-cart-plus"></i></a></li>
-          <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Hi {{request.user}}<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a style="color:" href="{% url 'marketplace:products_blog' %}">blog</a></li>
+          <li><a style="color:blue"  href="{% url 'marketplace:add_product' %}">Add Products</a></li>
+          <li><a style="color:blue"  href="{% url 'marketplace:my_products' %}">My Product</a></li>
+          <li><a style="color:cyan" href="/marketplace/add_tocart/"+str(id)><i class="fas fa-cart-plus"></i></a></li>
+          <li><a style="color:blue" class="dropdown-trigger" href="#!" data-target="dropdown1">Hi {{request.user}}<i class="material-icons right">arrow_drop_down</i></a></li>
           <script type="text/javascript">
             $(".dropdown-trigger").dropdown();
           </script>
@@ -60,7 +65,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
+            © 2018 Copyright Text
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
           </div>
