--- a/Icebreaker/register/templates/register/register.html
+++ b/Icebreaker/register/templates/register/register.html
@@ -29,11 +29,12 @@
   <section id="login">
     <div class="container" >
       <div class="row">
-        <div class="col-sm-4 col-md-4 col-lg-5 mx-auto">
+        <div class="col-sm-4 col-md-6 col-lg-6 mx-auto">
           <div class="card">
-            <div class="card-header" >
-
-              <h1>Account SignUp</h1>
+            <div class="card-header" style="height:90px" >
+              <input type="hidden" name="username" id="username" value=""><br>
+              <center>
+              <h1>Account SignUp</h1></center>
             </div>
             <form method="post">
                 		<center>
@@ -47,16 +48,16 @@
 				           <button type="submit" class="btn btn-outline-success" style="font-size: 24px;">Sign up</button>
                    </center>
 			      </form>
-
+            <br><br>
 						<div>
 							<center>
 								<a href="{% url 'social:begin' 'github' %}">
 
-									<button type="button" name="button" class="btn btn-primary">Github</button>
+									<button type="button" name="button" class="btn btn-primary" style="font-size: 24px;">Github</button>
 								</a>
 								&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 								<a href="{% url 'social:begin' 'google-oauth2' %}">
-									<button type="button" name="button" class="btn btn-danger">Google+</button>
+									<button type="button" name="button" class="btn btn-danger" style="font-size: 24px;">Google+</button>
 								</a>
 							</center>
 						</div>
