--- a/Icebreaker/startFundraiser/templates/startFundraiser/support_it.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/support_it.html
@@ -17,18 +17,11 @@
         <div class="col-sm-12 col-md-7">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <h2>Support the campaign!</h2>
-                    {% if error_message %}
-                        <p><strong>{{ error_message }}</strong></p>
-                    {% endif %}
-                    <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {% include 'startFundraiser/form_template.html' %}
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Submit</button>
-                            </div>
-                        </div>
+                    <h2>Support the campaign!</h2><br>
+                    <form method="POST"  action="{% url 'startFundraiser:checkout' pk %}" class="post-form">{% csrf_token %}
+                    <b>  Backer:</b>&nbsp&nbsp <input type="text" name="backer" value="{{ request.user }}" ><br><br>
+                    <b>  Amount:</b> <input type="number" name="pay" ><br><br>
+                        <button style="background-color:green"type="submit" class="save btn btn-default">PAY</button>
                     </form>
                 </div>
             </div>
