--- a/Icebreaker/startFundraiser/templates/startFundraiser/view_post.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/view_post.html
@@ -1,30 +1,35 @@
 {% extends 'startFundraiser/home.html' %}
 
 {% block content %}
-{% for post in posts %}
-  <a class="post" href="#">
-    <div class="post__title post__item">
-      {{ post.pk }}
-      {{ post.title}}
+{% if posts %}
+  {% for post in posts %}
+  <br><br><br><br><br><br><br>
 
-    </div>
-    <div class="">
-      <img class="" src="/media/{{ post.image }}" />
-    </div>
-    <div class="">
-      {{ post.description | safe }}
-      {{ post.body }}
-    </div>
-  <!--  <div class="post__description post__item">
-      {{ post.description2 | safe }}
-    </div> -->
-    <a class="">Read more</a>
-  </a>
-  <br>
+      <div class="post__title post__item">
 
-  <a href="{% url 'edit_post' id=post.pk %}">Edit</a>
-  <a href="{% url 'del_post'  id=post.pk %}">Delete</a>
+      <h1>  {{ post.title}} </h1>
 
-  {% endfor %}
+      </div>
+    <!--  <div class="">
+        <img class="" src="/media/{{ post.image }}" />
+      </div>-->
+      <div class="">
+        {{ post.description  }}
+        {{ post.body }}
+      </div>
+    <!--  <div class="post__description post__item">
+        {{ post.description2 | safe }}
+      </div> -->
 
+
+    <br>
+
+    <a href="{% url 'edit_post' id=post.pk %}">Edit</a>
+    <a href="{% url 'del_post'  id=post.pk %}">Delete</a>
+
+    {% endfor %}
+{% else %}
+  <br><br><br><br><br><br><br><br><br>
+  <center><h1>No New Notifications</h1></center>
+  {% endif %}
 {% endblock %}
