--- a/Icebreaker/community/templates/community/joined-group.html
+++ b/Icebreaker/community/templates/community/joined-group.html
@@ -1,35 +1,35 @@
 {% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}group detail{% endblock %}
     {% block content %}
-                    <div class="container">
+    <div class="container">
 
-<br><br><br>
-    <div class="table-responsive">
-        <center>
-    <table border="1" style="width:80%" class="table table-striped table-bordered table-hover">
-        <tr>
-            <th>
-                title
-            </th>
-            <th>
-                members
-            </th>
+        <br><br><br>
+        <div class="table-responsive">
+            <center>
+                <table border="1" style="width:80%" class="table table-striped table-bordered table-hover">
+                    <tr>
+                        <th>
+                            title
+                        </th>
+                        <th>
+                            members
+                        </th>
 
-        </tr>
-        {% for i in content %}
-        <tr>
-            <td>
-                <a href="{% url 'group_detail' i.group.id %}"> {{ i.group.title }}</a>
-            </td>
-            <td>
-                {{ i.group.number }}
-            </td>
+                    </tr>
+                    {% for i in content %}
+                    <tr>
+                        <td>
+                            <a href="{% url 'community:group_detail' i.group.id %}"> {{ i.group.title }}</a>
+                        </td>
+                        <td>
+                            {{ i.group.number }}
+                        </td>
 
-        </tr>
+                    </tr>
 
-        {% endfor %}
-</table>
-        </center>
+                    {% endfor %}
+                </table>
+            </center>
+        </div>
     </div>
-                    </div>
 {% endblock %}
