--- a/Icebreaker/community/templates/community/my-group.html
+++ b/Icebreaker/community/templates/community/my-group.html
@@ -1,100 +1,104 @@
 {% extends 'community/base/login-navbar-mdbs.html' %}
     {% block title %}my groups{% endblock %}
     {% block content %}
-                    <div class="container">
+<div class="container">
 
     <br><br>
     <br>
-<div class="jumbotron text-center">
-  <h1>Your Profile page</h1>
-</div>
-
-
-
-<div class="container">
-  <div class="row">
-
-
-	<div class="col-sm-4">
-	<h3>Image</h3>
-	  <img src="https://cdn-images-1.medium.com/max/1600/1*R5BU57AzSSokQ31btX1SDg.jpeg" class="img-responsive img-rounded" alt="profile picture" width="304" height="236">
-	</div>
-
-    <div class="col-sm-4">
-      <h3>name</h3>
-      <p>{{ usr.username }}</p>
+    <div class="jumbotron text-center">
+      <h1>Your Profile page</h1>
     </div>
 
-    <div class="col-sm-4">
-      <h3>email</h3>
-      <p>{{ usr.email }}</p>
-    </div>
 
-    <div class="col-sm-4">
-      <h3>github link</h3>
-      <p>github_link</p>
-    </div>
 
-  </div>
-</div>
+        <div class="container">
+          <div class="row">
 
-<div class="container">
-    {% if count == 0 %}
 
-    <h3>no groups</h3>
-    {% else %}
-    <h3>all the groups</h3>
-    <center>
-        <form method="POST">
-            {% csrf_token %}
-            <div class="table-responsive">
-                <table border="1" class="table table-striped table-bordered table-hover">
-                    <tr>
-                        <th>
-                            title
-                        </th>
-                        <th>
-                            members
-                        </th>
-                        <th>
-                            date
-                        </th>
-                        <th>
-                            address
-                        </th>
-                        <th>
-                            wanna delete?
-                        </th>
 
-                    </tr>
-                    {% for i in content %}
-                    <tr>
-                        <td>
-                            <a href="{% url 'group_detail' i.id %}"> {{ i.title }}</a>
-                        </td>
-                        <td>
-                            {{ i.number }}
-                        </td>
-                        <td>
-                            {{ i.date }}
-                        </td>
-                        <td>
-                            {{ i.address }}
-                        </td>
-                        <td>
-                            <input type="checkbox" name="checks[]" value="{{ i.pk }}">
 
-                        </td>
-
-                    </tr>
-
-                {% endfor %}
-                </table>
-                <button type="submit" class="btn btn-success">submit</button>
+            <div class="col-sm-4">
+              <h3>name</h3>
+              <p>{{ usr.username }}</p>
             </div>
-        </form>
-    </center>
-    {% endif %}
-</div>
+
+            <div class="col-sm-4">
+              <h3>email</h3>
+              <p>{{ usr.email }}</p>
+            </div>
+
+            <div class="col-sm-4">
+              <h3>github link</h3>
+              <p>github_link</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="container">
+            {% if count == 0 %}
+
+            <h3>no groups</h3>
+            {% else %}
+            <h3>all the groups</h3>
+            <center>
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="table-responsive">
+                        <table border="1" class="table table-striped table-bordered table-hover">
+                            <tr>
+                                <th>
+                                    title
+                                </th>
+                                <th>
+                                    members
+                                </th>
+                                <th>
+                                    date
+                                </th>
+                                <th>
+                                    address
+                                </th>
+                                <th>
+                                    wanna delete?
+                                </th>
+                                <th>
+                                    wanna edit?
+                                </th>
+
+                            </tr>
+                            {% for i in content %}
+                            <tr>
+                                <td>
+                                    <a href="{% url 'community:group_detail' i.id %}"> {{ i.title }}</a>
+                                </td>
+                                <td>
+                                    {{ i.number }}
+                                </td>
+                                <td>
+                                    {{ i.date }}
+                                </td>
+                                <td>
+                                    {{ i.address }}
+                                </td>
+                                <td>
+                                    <input type="checkbox" name="checks[]" value="{{ i.pk }}">
+
+                                </td>
+                                <td>
+                                    <a href="{% url 'community:group_edit' i.pk %}">edit</a>
+
+                                </td>
+
+                            </tr>
+
+                        {% endfor %}
+                        </table>
+                        <button type="submit" class="btn btn-success">submit</button>
                     </div>
+                </form>
+            </center>
+            {% endif %}
+        </div>
+</div>
 {% endblock %}
