--- a/Icebreaker/marketplace/templates/marketplace/product_details.html
+++ b/Icebreaker/marketplace/templates/marketplace/product_details.html
@@ -1,6 +1,6 @@
 {% extends 'marketplace/test.html' %}
 {% block content %}
-<div class="trend-details">
+<!-- <div class="trend-details">
   <div class="img">
     <img src="{{ details.image.url }}"/>
   </div>
@@ -12,5 +12,68 @@
     {% csrf_token %}
     <button type="submit">Add to cart</button>
   </form>
+</div> -->
+<div class="container">
+  <br>
+<div class="row">
+  <div class="col s12 l6">
+    <img src="{{ details.image.url }}" style="width:100%; height:400px;">
+  </div>
+  
+  <div class="col s12 l5 offset-l1">
+      <div class="row">
+        <div class="col s12 l6">
+           <h5>Title :</h5>
+        </div>
+        <div class="col s12 l6">
+           <p>{{details.product_title}}</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 l6">
+           <h5>Product_type :</h5>
+        </div>
+        <div class="col s12 l6">
+           <p>{{details.product_type}}</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 l6">
+           <h5>Description :</h5>
+        </div>
+        <div class="col s12 l6">
+           <p>{{details.description}}</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 l6">
+           <h5>Quantity :</h5>
+        </div>
+        <div class="col s12 l6">
+           <p>{{details.quantity}}</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 l6">
+           <h5>Cost :</h5>
+        </div>
+        <div class="col s12 l6">
+           <p>{{details.cost}}</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 l6 offset-l12">
+          <form action="{% url 'marketplace:add_to_cart' id=details.pk %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="waves-effect waves-light btn">Add to cart</button>
+          </form>
+        </div>
+      </div>
+    </div>
+</div>
 </div>
 {% endblock %}
