--- a/Icebreaker/startFundraiser/templates/startFundraiser/view_post.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/view_post.html
@@ -1,35 +1,39 @@
 {% extends 'startFundraiser/home.html' %}
 
+{% block internal_styles %}
+  <style>
+  .footer-sec {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+  </style>
+{% endblock internal_styles%}
+
 {% block content %}
-{% if posts %}
-  {% for post in posts %}
-  <br><br><br><br><br><br><br>
-
-      <div class="post__title post__item">
-
-      <h1>  {{ post.title}} </h1>
-
-      </div>
-    <!--  <div class="">
-        <img class="" src="/media/{{ post.image }}" />
-      </div>-->
-      <div class="">
-        {{ post.description  }}
-        {{ post.body }}
-      </div>
-    <!--  <div class="post__description post__item">
-        {{ post.description2 | safe }}
-      </div> -->
-
-
-    <br>
-
-    <a href="{% url 'edit_post' id=post.pk %}">Edit</a>
-    <a href="{% url 'del_post'  id=post.pk %}">Delete</a>
-
-    {% endfor %}
-{% else %}
+<main>
   <br><br><br><br><br><br><br><br><br>
-  <center><h1>No New Notifications</h1></center>
-  {% endif %}
+<div class="container">
+    {% if posts %}
+    <div class="row">
+    {% for post in posts %}
+      <div class="col-sm-4 ">
+      <div class="card">
+        <div class="card-body">
+          <h1 class="card-title">{{ post.title}}</h1>
+          <p class="card-text">{{ post.description|safe}}</p>
+          <a href="{% url 'edit_post' id=post.pk %}" class="card-link">Edit</a>
+          <a href="{% url 'del_post'  id=post.pk %}" class="card-link">Delete</a>
+        </div>
+      </div>
+    </div>
+      {% endfor %}
+  </div>
+      {% else %}
+    <br><br><br><br><br><br><br><br><br>
+    <center><h1>No New Notifications</h1></center>
+    {% endif %}
+</div>
+</main>
 {% endblock %}
