--- a/Icebreaker/register/templates/register/error.html
+++ b/Icebreaker/register/templates/register/error.html
@@ -14,7 +14,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
 
 	<!-- Custom stlylesheet -->
-	
+
   <link rel="stylesheet" type="text/css" href="{% static 'register/css1/style.css' %}">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -33,7 +33,8 @@
 			<div class="notfound-404">
 				<h1>Oops!</h1>
 			</div>
-			<h2>User is not available or not active</h2>
+			
+			<h2>User is not available or not active or sometimes more than one user login</h2>
 			<p>please try again it.<br>------------- or --------------</p>
 			<a href="{% url 'register:user_login' %}">Go To login</a>
 		</div>
